[tool.black]
line-length = 110
exclude = '''
(
    \.git
  | build
  | dist
  | .*pb2.*\.py
)
'''

[tool.poetry]
name = "rdflib_agraph"
version = "0.3.5"
description = "Sample"
authors = ["sample <sampleuser@corning.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rdflib = "^6.2.0"
loguru = "^0.5.3"
agraph-python = "^101.0.7"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^6.2.2"
flake8 = "^3.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

